# rave

./: .gitignore  ACQVA.html  BaltradMessageXML_8py.html  Compositing.html  Copyright  INSTALL  Makefile  Proj_8py.html  README  README-HDF5  TODO  acqva_8c.html  acqva_8h.html  acqva_8h_source.html  acqva__cluttermap__generator_8py.html  acqva__featuremap__generator_8py.html  acqvacompositegeneratorfactory_8c.html  acqvacompositegeneratorfactory_8h.html  acqvacompositegeneratorfactory_8h_source.html  acqvafeaturemap_8c.html  acqvafeaturemap_8h.html  acqvafeaturemap_8h_source.html  annotated.html  area_8c.html  area_8h.html  area_8h_source.html  arearegistry_8c.html  arearegistry_8h.html  arearegistry_8h_source.html  bitmap__generator_8c.html  bitmap__generator_8h.html  bitmap__generator_8h_source.html  cartesian_8c.html  cartesian_8h.html  cartesian_8h_source.html  cartesian__cf__io_8c.html  cartesian__cf__io_8h.html  cartesian__cf__io_8h_source.html  cartesian__odim__io_8c.html  cartesian__odim__io_8h.html  (+1246 more)
librave/: Makefile  configure  configure.in  def.mk.in  makelibs
librave/pyapi/: Makefile  getpy.c  getpy.h  h5rad.c  h5rad.h  pyraveapi.c  pyraveapi.h  pyravecompat.c  pyravecompat.h  rave.c  rave.h
librave/rack/: Doxyfile.ini  INSTALL  Makefile  Makefile-doxygen  def.mk  rules.mk
librave/rack/demo/: Z_SCAN_C_ESWI_20100706110000_seang_000000.h5  Z_SCAN_C_ESWI_20100706110000_searl_000000.h5  Z_SCAN_C_ESWI_20100706110000_sease_000000.h5  Z_SCAN_C_ESWI_20100706110000_sehud_000000.h5  Z_SCAN_C_ESWI_20100706110000_sekir_000000.h5  Z_SCAN_C_ESWI_20100706110000_sekkr_000000.h5  Z_SCAN_C_ESWI_20100706110000_selek_000000.h5  Z_SCAN_C_ESWI_20100706110000_selul_000000.h5  Z_SCAN_C_ESWI_20100706110000_seosu_000000.h5  Z_SCAN_C_ESWI_20100706110000_seovi_000000.h5  Z_SCAN_C_ESWI_20100706110000_sevar_000000.h5  Z_SCAN_C_ESWI_20100706110000_sevil_000000.h5  composite-example.sh  living-composite.sh  make-examples.sh
librave/rack/drain/: Doxyfile.ini  INSTALL  Makefile  Makefile-doxygen  drain.dox  rules.mk
librave/rack/drain/Release/: makefile  sources.mk
librave/rack/drain/image/: CatenatorOp.h  CoordinateHandler.cpp  CoordinateHandler.h  CopyOp.h  Cumulator.h  DistanceTransformFillOp.h  DistanceTransformOp.h  DoubleSmootherOp.h  Drain.h  FastAverageOp.h  FastOpticalFlowOp.h  File.h  FileBinary.cpp  FileBinary.h  FileFQD.cpp  FileFQD.h  FilePng.h  FloodFillOp.h  FuzzyPeakOp.h  FuzzyThresholdOp.h  GammaOp.h  Geometry.cpp  Geometry.h  GradientOp.h  HighBoostOp.h  HighPassOp.h  Image.h  ImageOp.h  ImageView.h  Intensity.h  MagickDrain.h  MarginalStatisticOp.h  MathOpPack.h  PaletteOp.h  PixelVectorOp.h  Point.h  QuadraticSmootherOp.h  QualityOverrideOp.h  QuantizatorOp.h  RecursiveRepairerOp.h  (+13 more)
librave/rack/drain/radar/: Andre.h  Composite.cpp  Composite.h  Constants.h  Coordinates.cpp  Coordinates.h  Geometry.cpp  Geometry.h  PolarAttenuation.h  PolarCappi.h  PolarCoordinateHandler.cpp  PolarCoordinateHandler.h  (+11 more)
librave/rack/hi5/: DataScaleOp.h  RaveConvert.cpp  RaveConvert.h  makefile  sources.mk
librave/rack/main/: Rack.cpp  Rack.h  RackIf.cpp  RackIf.h  RackLocalIf.h  main.cpp  makefile  sources.mk
librave/rack/ropo/: Ropo.cpp  Ropo.h  convertImage.cpp  convertImage.h  fmi_image.c  fmi_image.h  fmi_image_arith.c  fmi_image_arith.h  fmi_image_filter.c  fmi_image_filter.h  fmi_image_filter_line.c  fmi_image_filter_line.h  fmi_image_filter_morpho.c  fmi_image_filter_morpho.h  fmi_image_filter_speck.c  fmi_image_filter_speck.h  fmi_image_filter_texture.c  fmi_image_filter_texture.h  fmi_image_histogram.c  fmi_image_histogram.h  fmi_image_restore.c  fmi_image_restore.h  fmi_meteosat.c  fmi_meteosat.h  fmi_radar_codes.h  fmi_radar_codes.inc  fmi_radar_image.c  fmi_radar_image.h  fmi_sunpos.c  fmi_sunpos.h  fmi_util.c  fmi_util.h  main.c  main_help.c  makefile  ropo_hdf.c  ropo_hdf.h  sources.mk
librave/radvol/: INSTALL  Makefile
librave/radvol/doxygen/: Makefile  radvol_doxygen.cfg
librave/radvol/lib/: Makefile  radvol.c  radvol.h  radvolatt.c  radvolatt.h  radvolbroad.c  radvolbroad.h  radvolnmet.c  radvolnmet.h  radvolspeck.c  radvolspeck.h  radvolspike.c  radvolspike.h
librave/radvol/test/: Makefile  testRadvol.c  testRadvol.h  testRadvolAtt.c  testRadvolAtt.h  testRadvolBlock.c  testRadvolBlock.h  testRadvolBroad.c  testRadvolBroad.h  testRadvolNmet.c  testRadvolNmet.h  testRadvolQC  testRadvolQC.c  testRadvolSpeck.c  testRadvolSpeck.h  testRadvolSpike.c  testRadvolSpike.h
librave/scansun/: Makefile  scansun  scansun.c  scansun.h  scansun_main.c
librave/tnc/: Makefile  example.c  tnc.c
librave/toolbox/: Makefile  acqva.c  acqva.h  acqvacompositegeneratorfactory.c  acqvacompositegeneratorfactory.h  acqvafeaturemap.c  acqvafeaturemap.h  area.c  area.h  arearegistry.c  cartesian.c  cartesian.h  cartesian_cf_io.c  cartesian_cf_io.h  cartesian_odim_io.c  cartesian_odim_io.h  cartesiancomposite.c  cartesiancomposite.h  cartesianparam.c  cartesianparam.h  cartesianvolume.c  cartesianvolume.h  composite.c  composite.h  composite_utils.c  composite_utils.h  compositearguments.c  compositearguments.h  compositeengine.c  compositeengine.h  compositeenginebase.c  compositeenginebase.h  compositeenginefunctions.c  compositeenginefunctions.h  compositeengineqc.c  compositeengineqc.h  compositefactorymanager.c  compositefactorymanager.h  compositefilter.c  compositefilter.h  (+118 more)
librave/transform/: Makefile  area.c  area.h  arearegistry.c  arearegistry.h  cartesian.c  cartesian.h  cartesian_odim_adaptor.c  cartesian_odim_adaptor.h  cartesian_odim_io.c  cartesian_odim_io.h  cartesianparam.c  cartesianparam.h  cartesianvolume.c  cartesianvolume.h  composite.c  composite.h  composite_algorithm.h  detection_range.c  detection_range.h  odim_io_utilities.c  odim_io_utilities.h  polar_odim_io.c  polar_odim_io.h  polarnav.c  polarnav.h  polarscan.c  polarscan.h  polarscanparam.c  polarscanparam.h  polarvolume.c  polarvolume.h  poo_composite_algorithm.c  poo_composite_algorithm.h  projection.c  projection.h  projectionregistry.c  projectionregistry.h  radardefinition.h  rave_alloc.c  (+38 more)
(+621 files in other folders)
